<resources>
    <string name="app_name">Bia Me</string>

    <string name="welcome"> Welcome to Bia Me</string>

    <!-- For Nav -->
    <string name="action_settings">Close App</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Categories Page-->
    <string name="catHeading">Food Categories</string>


    <!-- Home page-->
    <string name="popHeading">Most Popular Food Dishes</string>
    <string name="popButton1">Wings</string>
    <string name="popButton2">Pizza</string>
    <string name="popButton3">Burgers</string>
    <string name="popButton4">Fries</string>
    <string name="popButton5">Pastas</string>
    <string name="popButton6">Steak</string>
    <string name="popButton7">Salads</string>
    <string name="popButton8">Chicken</string>

    <!-- Dish Page -->
    <string name="dishHeading"> Best Restaurants for {Dish} in Dublin </string>
    <string name="ranking1">1.</string>
    <string name="ranking2">2.</string>
    <string name="ranking3">3.</string>
    <string name="ranking4">4.</string>
    <string name="ranking5">5.</string>
    <string name="ranking6">6.</string>
    <string name="ranking7">7.</string>
    <string name="ranking8">8.</string>
    <string name="ranking9">9.</string>
    <string name="ranking10">10.</string>
    <string name="restaurant1"> Restaurant Name </string>
    <string name="addRating">Add Rating</string>

    <!-- Place Page -->
    <string name="place_heading">{Restaurant/Place Name}</string>
    <string name="place_about_title">About</string>
    <string name="place_about_desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
    </string>
    <string name="place_photos">Photos</string>

    <!-- Top Rest -->
    <string name="top_rest">Top Restaurants in {location}</string>

    <!-- Contact Page -->
    <string name="contact">Contact Us</string>
    <string name="phoneNumber"> Phone: 010000000 </string>
    <string name="email"> Email: email@biame.com </string>


</resources>
