<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- The main content view -->


            <RelativeLayout
                android:id="@+id/mainContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/main_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <SearchView
                        android:id="@+id/Search"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="320dp"
                        android:layout_marginTop="10dp" />


                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/activity_main"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:context="com.android_examples.autoimageslider_android_examplescom.MainActivity">


                        <com.daimajia.slider.library.SliderLayout
                            android:id="@+id/slider"
                            android:layout_width="fill_parent"
                            android:layout_height="320dp"
                            />

                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/popular_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="20dp">

                        <TextView
                            android:id="@+id/popularHeading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:text="@string/popHeading"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/popButton1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/homebtn"
                                android:text="@string/popButton1"
                                android:onClick="openDish"
                                />

                            <Button
                                android:id="@+id/popButton2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="18dp"
                                android:background="@color/homebtn"
                                android:elevation="0dp"
                                android:text="@string/popButton2" />

                            <Button
                                android:id="@+id/popButton3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="40dp"
                                android:layout_marginTop="9dp"
                                android:background="@color/homebtn"
                                android:text="@string/popButton3" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/popButton5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:background="@color/homebtn"
                                android:text="@string/popButton5" />

                            <Button
                                android:id="@+id/popButton4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginTop="24dp"
                                android:background="@color/homebtn"
                                android:text="@string/popButton4" />

                            <Button
                                android:id="@+id/popButton6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="40dp"
                                android:layout_marginTop="50dp"
                                android:background="@color/homebtn"
                                android:text="@string/popButton6" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/popButton7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginTop="3dp"
                                android:background="@color/homebtn"
                                android:text="@string/popButton7" />

                            <Button
                                android:id="@+id/popButton8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="50dp"
                                android:layout_marginTop="30dp"
                                android:background="@color/homebtn"
                                android:text="@string/popButton8" />
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </ScrollView>
            </RelativeLayout>

    <RelativeLayout
        android:id="@+id/drawerPane"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <!-- Profile Box -->

        <RelativeLayout
            android:id="@+id/profileBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/appColour"
            android:padding="8dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/icon2"
                android:onClick="openHome"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/avatar"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NTBD"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:onClick="openHome"/>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="4dp"
                    android:text="Find your favourite dishes"
                    android:textColor="#fff"
                    android:textSize="12sp"
                    android:onClick="openHome"/>
            </LinearLayout>
        </RelativeLayout>

        <!-- List of Actions (pages) -->
        <ListView
            android:id="@+id/navList"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/profileBox"
            android:background="#ffffffff"
            android:choiceMode="singleChoice" />

    </RelativeLayout>


    <!--<include layout="@layout/activity_hamburger" />-->


    <!-- The navigation drawer -->

</android.support.v4.widget.DrawerLayout>
